# RustWebApp

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  tailwind.config.js
app/: Cargo.toml
app/src/: lib.rs
app/src/components/: button.rs  footer.rs  mod.rs  navbar.rs
app/src/layouts/: baselayout.rs  mod.rs
client/: Cargo.toml
client/src/: lib.rs
server/: Cargo.toml  Readme.md  docker-compose.yml  package-lock.json  package.json
server/assets/: output.css
server/migrations/: 20240201220430_starterz.up.sql
server/src/: config.rs  fileserv.rs  lib.rs  server.rs
server/src/controllers/: error_controller.rs  mod.rs  service_controller.rs
server/src/errorhandling/: error.rs
server/src/handlers/: error_handler.rs  main_handlers.rs  mod.rs
server/src/models/: errors.rs  mod.rs  state.rs  templates.rs  users.rs
server/src/routes/pages/: errors.rs  json.rs  mod.rs
server/src/utils/: config.rs  db_pool.rs  mod.rs  responses.rs  tracing.rs
server/templates/layouts/: base.html
server/templates/pages/: index.html  name.html
style/: output.css
web_shared/: Cargo.toml
