[workspace]
resolver = "2"
members = ["app", "client", "server"]

[workspace.package]
version = "0.1.0"
authors = ["Mpinyaz"]
description = "A Rust app built with Axum, Leptos, SQLx - PostgreSQL, TailwindCSS, and more"
edition = "2021"

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'

[workspace.dependencies]
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
axum = "0.7.3"
chrono = { version = "0.4.37", features = ["serde"] }
console_error_panic_hook = { version = "0.1.7" }
console_log = { version = "1.0.0" }
clap = { version = "4.5.4", features = ["derive"] }
cfg-if = { version = "1.0.0" }
dotenv = "0.15.0"
hyper = { version = "1.2.0", features = ["full"] }
lazy_static = "1.4.0"
log = "0.4.21"
serde = { version = "1.0.194", features = ["derive"] }
serde_json = "1.0.110"
sqlx = { version = "0.7.4", features = [
  "uuid",
  "chrono",
  "runtime-tokio",
  "runtime-async-std-native-tls",
  "postgres",
] }
tokio = { version = "1.37.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
thiserror = { version = "1.0.58" }
tracing-error = { version = "0.2.0" }
uuid = { version = "1.8.0", features = ["v4", "serde"] }
leptos = { version = "0.6.10", features = ["nightly"] }
leptos_meta = { version = "0.6.10", features = ["nightly"] }
leptos_router = { version = "0.6.10", features = ["nightly"] }
leptos_axum = { version = "0.6.10" }
wasm-bindgen = "=0.2.92"
http = { version = "1.1.0" }
[[workspace.metadata.leptos]]
name = "leptos_app"
bin-package = "server"
lib-package = "client"
output-name = "leptos_app"
site-pkg-dir = "pkg"
site-root = "target/site"
tailwind-input-file = "style/tailwind.css"
tailwind-config-file = "tailwind.config.js"
style-file = "style/output.css"
# assets-dir = "public"
site-addr = "127.0.0.1:4141"
reload-port = 4142
browserquery = "defaults"
watch = false
env = "DEV"
bin-features = ["ssr"]
# bin-default-features = false
lib-features = ["hydrate"]
# lib-default-features = false
