[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
app = { path = "../app", default-features = false, features = ["hydrate"] }
leptos = { version = "0.6.5", features = ["hydrate"] }
leptos_router = { version = "0.6.5", features = ["csr"] }

[features]
ssr = ["leptos_router/ssr", "leptos/ssr"]
